# ethminer

./: .bumpversion.cfg  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  API_DOCUMENTATION.md  BUILDING.md  BuildInfo.h  BuildInfo.h.in  BuildInfo.sh  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  CodingStandards.txt  Common.h  Dockerfile  Ethereum.sln  GPLV3_LICENSE  Hello world  LICENSE  MANIFEST.in  POOLEXSAMPLES_ETH.md  POOL_EXAMPLES_ETH.md  PatriciaTree.cpp  PatriciaTree.h  Poolleth  README.md  RLP.cpp  RLP.h  TODO  VirtualMachine.cpp  VirtualMachine.h  appdmg.json.in  appveyor.yml  astylerc  build.py  (+49 more)
alethzero/: AllAccounts.cpp  AllAccounts.h  AllAccounts.ui  BrainWallet.cpp  BrainWallet.h  BrainWallet.ui  CMakeLists.txt  Connect.cpp  Connect.h  Connect.ui  Context.cpp  Context.h  DappHost.cpp  DappHost.h  DappLoader.cpp  DappLoader.h  Debugger.cpp  Debugger.h  Debugger.ui  DownloadView.cpp  DownloadView.h  ExportState.cpp  ExportState.h  GasPricing.ui  GetPassword.ui  GraphParameters.h  Grapher.cpp  Grapher.h  LogPanel.cpp  LogPanel.h  Main.ui  MainFace.cpp  MainFace.h  MainWin.cpp  MainWin.h  MiningView.cpp  MiningView.h  NameRegNamer.cpp  NatspecHandler.cpp  NatspecHandler.h  (+19 more)
eth/: BigInteger.js  CMakeLists.txt  CommonJS.cpp  CommonJS.h  EthStubServer.cpp  EthStubServer.h  Ethereum.vcxproj  Farm.h  PhoneHome.h  abstractethstubserver.h  eth.js  ethString.js  farm.json  main.cpp  phonehome.json  spec.json
eth-ncurses-cli/: CMakeLists.txt
ethconsole/: CMakeLists.txt  main.cpp
ethkey/: CMakeLists.txt  KeyAux.h  main.cpp
ethminer/: CMakeLists.txt  DBusInt.h  Farm.h  FarmClient.h  MinerAux.h  ethminer.rc  farm.json  main.cpp
ethrpctest/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  main.cpp
ethvm/: CMakeLists.txt  main.cpp
evmjit/: CMakeLists.txt  LICENSE.md  README.md
exp/: CMakeLists.txt  main.cpp
khronos_icd/: CMakeLists.txt  LICENSE.txt  Makefile  OpenCL.def  OpenCL.rc  README.txt  build_using_cmake.bat  icd.c  icd.h  icd_dispatch.c  icd_dispatch.h  icd_exports.map  icd_linux.c  icd_windows.c
libapicore/: Api.cpp  Api.h  ApiServer.cpp  ApiServer.h  CMakeLists.txt  httpServer.cpp  httpServer.h
libdevcore/: Assertions.h  Base64.cpp  Base64.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.cpp  CommonJS.h  Exceptions.h  FileSystem.cpp  FixedHash.cpp  FixedHash.h  Guards.h  Hash.h  Log.cpp  Log.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.h  RLP.cpp  RLP.h  RangeMask.cpp  RangeMask.h  SHA3.cpp  SHA3.h  SourceLocation.h  StructuredLogger.cpp  StructuredLogger.h  TarExtract.cpp  TarExtract.h  Terminal.cpp  Terminal.h  TgzExtract.cpp  TransientDirectory.cpp  TrieCommon.cpp  TrieCommon.h  (+10 more)
libdevcrypto/: AES.cpp  AES.h  All.h  CMakeLists.txt  Common.cpp  Common.h  CryptoHeaders.h  CryptoPP.cpp  CryptoPP.h  EC.cpp  EC.h  ECDHE.cpp  ECDHE.h  ECIES.cpp  ECIES.h  Exceptions.h  FileSystem.cpp  FileSystem.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  SHA3.cpp  SHA3.h  SHA3MAC.cpp  SHA3MAC.h  SecretStore.cpp  SecretStore.h  TrieCommon.cpp  TrieCommon.h  TrieDB.cpp  TrieDB.h  TrieHash.cpp  TrieHash.h  WordList.cpp  WordList.h
libethash/: CMakeLists.txt  data_sizes.h  endian.h  ethash.h  internal.c  internal.h  io.c  io_posix.c  io_win32.c  litehash.c  util.h
libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel.cl  CLMiner_kernel_experimental.cl  CLMiner_kernel_fpga.cl  CLMiner_kernel_stable - Kopie.cl  CLMiner_kernel_stable.cl  CLMiner_kernel_unstable.cl  CMakeLists.txt  EthashGPUMiner.cpp  EthashGPUMiner.h  bin2h.cmake  cl.hpp  cl2h.cmake  ethash_cl_miner.cpp  ethash_cl_miner.h  ethash_cl_miner_kernel.cl  ethash_miner_kernel.cl  ethash_miner_kernel.h  progpow_miner_kernel.cl  progpow_miner_kernel.h
libethash-cpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  CUDAMiner_cuda.cu  CUDAMiner_cuda.h  CUDAMiner_kernel.cu  EthashCUDAMiner.cpp  EthashCUDAMiner.h  cuda_helper.h  dag_generation_kernel.cu  dag_generation_kernel.h  dag_globals.h  dagger.cuh  dagger_shared.cuh  dagger_shuffled.cuh  ethash_cuda_miner.cpp  ethash_cuda_miner.h  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  ethash_kernel.cuh  ethash_miner_kernel.cu  ethash_miner_kernel.h  fnv.cuh  fnv1a.cuh  keccak.cuh  keccak_u64.cuh  progpow_cuda_miner_kernel_globals.h  progpow_miner_kernel.cu  progpow_miner_kernel.h  sha512.cuh  wrapnvml.cu  wrapnvml.h
libethash-ocl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel_experimental.cl  CLMiner_kernel_stable.cl  CMakeLists.txt  OCLMiner.cpp  OCLMiner.h
libethconsole/: CMakeLists.txt  JSScope.cpp  JSScope.h  JSV8ScopeBase.cpp  JSV8ScopeBase.h
libethcore/: ABI.cpp  ABI.h  All.h  BasicAuthority.cpp  BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  BlockInfo.cpp  BlockInfo.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonEth.cpp  CommonEth.h  CommonJS.cpp  CommonJS.h  DBusInt.h  Dagger.cpp  Dagger.h  Ethash.cpp  Ethash.h  EthashAux.cpp  EthashAux.h  EthashCPUMiner.cpp  EthashCPUMiner.h  EthashCUDAMiner.cpp  EthashCUDAMiner.h  EthashGPUMiner.cpp  EthashGPUMiner.h  EthashSealEngine.cpp  EthashSealEngine.h  Ethasher.cpp  Ethasher.h  Exceptions.cpp  Exceptions.h  Farm.cpp  Farm.h  FileSystem.cpp  (+37 more)
libethereum/: ABI.h  Account.cpp  Account.h  AccountDiff.cpp  AccountDiff.h  AddressState.cpp  AddressState.h  All.h  BasicGasPricer.cpp  BasicGasPricer.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainSync.cpp  BlockChainSync.h  BlockDetails.cpp  BlockDetails.h  BlockInfo.cpp  BlockInfo.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  CachedAddressState.cpp  CachedAddressState.h  CanonBlockChain.cpp  CanonBlockChain.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonEth.cpp  CommonEth.h  CommonIO.cpp  CommonIO.h  CommonNet.cpp  (+102 more)
libethereumx/: CMakeLists.txt  Ethereum.cpp  Ethereum.h
libevm/: All.h  CMakeLists.txt  ExtVMFace.cpp  (+12 more)
(+1593 files in other folders)
