cmake_policy(SET CMP0015 NEW)

aux_source_directory(. SRC_LIST)

include_directories(../libethereum)
link_directories(../libethereum)

add_executable(eth-ncurses-cli ${SRC_LIST})

if (${TARGET_PLATFORM} STREQUAL "w64")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
	target_link_libraries(eth-ncurses-cli gcc)
	target_link_libraries(eth-ncurses-cli gdi32)
	target_link_libraries(eth-ncurses-cli ws2_32)
	target_link_libraries(eth-ncurses-cli mswsock)
	target_link_libraries(eth-ncurses-cli shlwapi)
	target_link_libraries(eth-ncurses-cli iphlpapi)
	target_link_libraries(eth-ncurses-cli cryptopp)
	target_link_libraries(eth-ncurses-cli ncurses)
	target_link_libraries(eth-ncurses-cli form)
	target_link_libraries(eth-ncurses-cli boost_system-mt-s)
	target_link_libraries(eth-ncurses-cli boost_filesystem-mt-s)
	target_link_libraries(eth-ncurses-cli boost_thread_win32-mt-s)
	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
elseif (UNIX)
	target_link_libraries(eth-ncurses-cli ncurses)
	target_link_libraries(eth-ncurses-cli form)
else ()
	target_link_libraries(eth-ncurses-cli ${CRYPTOPP_LIBRARIES})
	target_link_libraries(eth-ncurses-cli boost_system)
	target_link_libraries(eth-ncurses-cli boost_filesystem)
	target_link_libraries(eth-ncurses-cli ncurses)
	target_link_libraries(eth-ncurses-cli form)
	find_package(Threads REQUIRED)
	target_link_libraries(eth-ncurses-cli ${CMAKE_THREAD_LIBS_INIT})
endif ()

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	include_directories(/usr/local/include)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

target_link_libraries(eth-ncurses-cli ethereum)
target_link_libraries(eth-ncurses-cli miniupnpc)
target_link_libraries(eth-ncurses-cli leveldb)
target_link_libraries(eth-ncurses-cli gmp)

install( TARGETS eth-ncurses-cli DESTINATION bin )

